# Sokhan-AI

./: .gitignore  docker-compose.yaml  pyproject.toml
src/sokhan/: test.py
src/sokhan/data_entry/: crawlers.py  dispatcher.py  pipelines.py
src/sokhan/data_entry/base/: crawlers.py  documents.py
src/sokhan/data_entry/custom/: crawlers.py  documents.py
src/sokhan/data_entry/domain/custom/: crawlers.py  documents.py
src/sokhan/data_entry/domain/git/: crawlers.py  documents.py
src/sokhan/data_entry/domain/tasnim/: crawlers.py  documents.py
src/sokhan/data_entry/git/: crawlers.py  documents.py
src/sokhan/data_entry/utils/: selenium_crawler.py
src/sokhan/data_entry/virgool/: crawlers.py
src/sokhan/db/: mongo_client.py
src/sokhan/entry/: crawlers.py  dispatcher.py  pipelines.py
src/sokhan/entry/base/: crawlers.py
src/sokhan/entry/custom/: crawlers.py  documents.py
src/sokhan/entry/git/: crawlers.py  documents.py
src/sokhan/entry/utils/curl/: exceptions.py  fetch.py
src/sokhan/entry/virgool/: crawlers.py
src/sokhan/scripts/: load_tasnim_news_a_year.py  mongo.sh  run_news_feed_pipeline.py  run_sample_pipeline.py
src/sokhan/utils/: general.py
src/sokhan/utils/curl/: configs.py  fetch.py
src/sokhan/utils/db/: mongo_client.py
